# my_faiss

./: .gitignore  CMakeLists.txt  cmake_build.sh  evaluate_diskann.sh  run_HNSWAQ.sh  test_construction_hnsw.sh
DiskANN/include/: pq_flash_index.h
DiskANN/src/: distance.cpp  pq_flash_index.cpp
experiments/: CMakeLists.txt
experiments/DiskANN/: CMakeLists.txt  bench_diskann_faiss_sq.cpp  bench_diskann_quant.cpp  bench_diskann_standard.cpp  build_diskann_index.cpp
experiments/DiskANN/config/: datasets.conf  opq.conf  osq.conf  pq.conf  rabitq.conf  sq.conf
experiments/DiskANN/include/: diskann_bench_config.h
experiments/DiskANN/utils/: fvecs_to_bin.py  test_faiss_clustering.py
experiments/OptimizedScalarQuantization/: .gitignore  CMakeLists.txt  OSQIndex.cpp  OSQIndex.h  OptimizedScalarQuantizer.cpp  OptimizedScalarQuantizer.h  example_main.cpp
experiments/RaBitQ-Library/: bench_hnsw_sift1m.sh
experiments/RaBitQ-Library/sample/: hnsw_rabitq_querying.cpp
experiments/RabitQ/: CMakeLists.txt  bench_rabitq_sift.cpp
experiments/SAQ-Library/include/fmt/: core.h
experiments/SAQ-Library/include/gflags/: gflags.h
experiments/SAQ-Library/include/glog/: logging.h
experiments/SAQ-Library/include/saqlib/: defines.hpp
experiments/SAQ-Library/include/saqlib/quantization/caq/: caq_encoder.hpp
experiments/VAQ/bitvecengine/: VAQ.cpp  VAQ.hpp
experiments/VAQ/bitvecengine/utils/FPGrowth/: fptree.cpp  fptree.hpp
experiments/hnsw/: CMakeLists.txt  README.md  bench_construction_hnsw.cpp  bench_hnsw_quant.cpp  bench_hnsw_quant_profile.cpp  bench_hnsw_quant_rerank.cpp  bench_hnsw_rabitq_native.cpp  bench_hnsw_standard.cpp  bench_hnswpq.cpp  build_hnsw_index.cpp  turboquant_wrapper.cpp
experiments/hnsw/config/: datasets.conf  lsq.conf  opq.conf  osq.conf  plsq.conf  pq.conf  prq.conf  rabitq.conf  rq.conf  saq.conf  sq.conf  turboquant.conf  vaq.conf
experiments/hnsw/include/: aq_wrapper.h  bench_config.h  bench_utils.h  opq_wrapper.h  osq_wrapper.h  pq_wrapper.h  quant_wrapper.h  rabitq_wrapper.h  saq_wrapper.h  sq_wrapper.h  turboquant_wrapper.h  vaq_wrapper.h
experiments/hnsw/scripts/: compare_configs.py  construction_build_time_table.py  construction_qps_recall.py  plot_cache_stats.py  qps_recall.py  test_hnswpq.py  test_hnswsq.py  utils.py
experiments/utils/: autiovideo.py  bin2fvecs.py  create_siftsmall_hdf5.py  fbin_ann_gt_gpu.py  fvecs_ann_gt_gpu.py  oldfvecs2newfvecs.py
